--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.0",
     "@react-icons/all-files": "^4.1.0",
+    "@svgr/webpack": "^5.5.0",
     "assert": "^2.0.0",
     "classnames": "^2.3.1",
-    "gatsby": "^3.14.5",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby": "^4.1.1",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-source-filesystem": "^4.1.0",
     "gatsby-source-graphcms": "^2.6.0",
-    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-remark": "^5.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
