Basically done owo

--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
     "@svgr/webpack": "^5.5.0",
     "assert": "^2.0.0",
     "classnames": "^2.3.1",
-    "gatsby": "^4.1.1",
+    "gatsby": "^4.1.2",
     "gatsby-plugin-image": "^2.1.0",
-    "gatsby-plugin-manifest": "^4.1.0",
-    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-manifest": "^4.1.1",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
-    "gatsby-plugin-sass": "^5.1.0",
-    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sass": "^5.1.1",
+    "gatsby-plugin-sharp": "^4.1.1",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-source-graphcms": "^2.6.0",
-    "gatsby-transformer-remark": "^5.1.0",
+    "gatsby-transformer-remark": "^5.1.1",
     "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.1.1",
     "react-markdown": "^7.1.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
-    "@netlify/plugin-gatsby": "^1.0.3",
+    "@netlify/plugin-gatsby": "^2.0.0-beta",
     "eslint-config-react-app": "^6.0.0",
     "prettier": "^2.4.1"
   }
