--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "assert": "^2.0.0",
     "classnames": "^2.3.1",
     "gatsby": "^4.1.2",
+    "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.1",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
