--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-image": "^2.1.1",
     "gatsby-plugin-manifest": "^4.1.2",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
+    "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sass": "^5.1.1",
     "gatsby-plugin-sharp": "^4.1.2",
@@ -26,6 +27,7 @@
     "gatsby-source-graphcms": "^2.7.0-next.1",
     "gatsby-transformer-remark": "^5.1.2",
     "gatsby-transformer-sharp": "^4.1.0",
+    "qrcode": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-gatsby": "^1.0.3",
+    "css-loader-shorter-classnames": "^2.0.1",
     "eslint-config-react-app": "^6.0.0",
     "prettier": "^2.4.1"
   }
