--- a/package.json
+++ b/package.json
@@ -2,43 +2,46 @@
   "name": "@fpunny/resume",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18"
+  },
   "description": "My personal resume template.",
   "scripts": {
-    "start": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "start": "gatsby develop",
     "lint": "prettier --write .",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fontsource/inter": "^4.5.0",
+    "@fontsource/inter": "^4.5.15",
     "@react-icons/all-files": "^4.1.0",
-    "classnames": "^2.3.1",
-    "gatsby": "^4.1.3",
-    "gatsby-plugin-google-gtag": "^4.1.0",
-    "gatsby-plugin-image": "^2.1.1",
-    "gatsby-plugin-manifest": "^4.1.2",
-    "gatsby-plugin-netlify": "^4.0.0-next.0",
-    "gatsby-plugin-offline": "^5.2.0",
-    "gatsby-plugin-react-helmet": "^5.1.0",
-    "gatsby-plugin-sass": "^5.1.1",
-    "gatsby-plugin-sharp": "^4.1.2",
-    "gatsby-source-filesystem": "^4.1.1",
-    "gatsby-source-graphcms": "^2.7.0-next.1",
-    "gatsby-transformer-remark": "^5.1.2",
-    "gatsby-transformer-sharp": "^4.1.0",
-    "qrcode": "^1.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "classnames": "^2.3.2",
+    "color": "^4.2.3",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-google-gtag": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-sass": "^6.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "qrcode": "^1.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-hot-toast": "^2.1.1",
-    "react-markdown": "^7.1.0",
-    "sass": "^1.43.4"
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^8.0.7",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
-    "@netlify/plugin-gatsby": "^1.0.3",
+    "@netlify/plugin-gatsby": "^3.6.2",
     "css-loader-shorter-classnames": "^2.0.1",
-    "eslint-config-react-app": "^6.0.0",
-    "prettier": "^2.4.1"
+    "eslint-config-react-app": "^7.0.1",
+    "gatsby-source-graphql": "^5.9.0",
+    "prettier": "^2.8.8"
   }
 }
